--- a/README
+++ b/README
@@ -1,4 +1,2 @@
 Bem-vindo!!!
-Espero poder ajudar com alguma ideia ou mesmo funcionalidade básicas.
-O projeto de Spring de um CRUD já tratado com possíveis erros que podem dar pode ser usado livremente.
-Além disso, vale a ressalva que o Java está usando o padrão POO
+Projeto visa uma solução de pedidos de um restaurante com comandas
